After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777347 - hidpi is never allowed on external monitors > SMALLEST_4K_WIDTH
hidpi is never allowed on external monitors > SMALLEST_4K_WIDTH
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2017-01-16 17:41 UTC by Caolan McNamara
Modified: 2017-06-07 12:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
I guess the logic is reversed here (958 bytes, patch)
2017-01-16 17:41 UTC, Caolan McNamara
none Details | Review
monitor-manger: invert logic for 4k TV scaling (1.24 KB, patch)
2017-05-19 17:34 UTC, Christian Kellner
committed Details | Review

Description Caolan McNamara 2017-01-16 17:41:48 UTC
Created attachment 343578 [details] [review]
I guess the logic is reversed here

looks like a reversed check to me
Comment 1 Christian Kellner 2017-05-19 17:34:11 UTC
Created attachment 352178 [details] [review]
monitor-manger: invert logic for 4k TV scaling

For devices connected via HDMI (supposedly TVs) we want have a
scale factor of 1 if we are *below* the smallest 4k resolution
width (not equal or above) and do the scaling factor computation
if we are above the limit. This check was apparently wrongly
ported from gnome-settings-daemon.

Based of a patch by Caolan McNamara <caolanm@redhat.com>.
Comment 3 Jonas Ådahl 2017-06-07 11:33:34 UTC
Review of attachment 352178 [details] [review]:

So the code in gsd reads as

"If it is not larger than 4K on HDMI, skip resolution check"

while the mutter code previously read

"If it is larger than 4K on HDMI, skip resolution check"

so this change, making it do the same as gsd did does indeed make a lot of sense.